  * === added directory usr/lib/orange-box/dgs-1100, usr/lib/orange-
    box/dgs-1100/config.bin, usr/lib/orange-box/dgs-1100/firmware.bin:
    - save a snapshot of a working, properly configured DGS-1100 switch
      firmware and configuration
      + this includes vlan.2 on port 1+16, for uplink
  * usr/bin/orange-box-add-node:
    - add MAAS 1.6 support, for new syntax for fastpath install tag

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 29 Jul 2014 09:30:27 +0100

orange-box (1.55-0ubuntu1) utopic; urgency=medium

  * debian/control:
    - add x11vnc;  this is essential when trying to access the desktop
      of node0, when there is no monitor

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 29 Jul 2014 09:30:25 +0100

orange-box (1.54-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-status-all-nodes:
    - only status 2 vm's now

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Jul 2014 11:15:22 +0100

orange-box (1.53-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-bootstrap-juju:
    - add a bootstrap-juju script
  * usr/bin/orange-box-add-virtual-nodes:
    - only add 2 virtual nodes, for juju and neutron;  landscape doesn't
      do well in our VM; drop the tag

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 25 Jul 2014 14:41:12 -0500

orange-box (1.52-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-purge-everything:
    - purge safely
  * debian/control, debian/postinst:
    - manage master node installs with Landscape, if the hostname starts with
      OrangeBox*

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 24 Jul 2014 23:16:59 -0500

orange-box (1.51-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-add-virtual-nodes:
    - be a little more generous with our vm's
      + up disk from 10G to 20G (since they're sparse)
      + up vcpus to 2

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 16 Jul 2014 23:29:27 -0500

orange-box (1.50-0ubuntu1) utopic; urgency=medium

  * usr/bin/orange-box-status-all-nodes: